--- a/topic-ideas/topic-ideas.Rmd
+++ b/topic-ideas/topic-ideas.Rmd
@@ -17,6 +17,8 @@ We wanted to look at Airbnb data because we thought this could be interesting in
 
 ### Idea #3 
 
+We are interested in Uber data because we want to are curious how certain factors such as time, location, and distance, will play a role in the price of Uber rides. We are also interested in eventually using regression and statistics to predict the prices of Uber rides based on location, time, and distance.
+
 ### Idea #4
 
 
