--- a/topic-ideas/topic-ideas.Rmd
+++ b/topic-ideas/topic-ideas.Rmd
@@ -13,7 +13,7 @@ We wanted to look at Airbnb data because we thought this could be interesting in
 
 ### Idea #2 
 
-We are interested in Uber/Lyft data because we want to are curious how certain factors such as time, location, and distance, will play a role in the price of Uber/Lyft rides. We are also interested in eventually using regression and statistics to predict the prices of Uber rides based on location, time, and distance.
+We are interested in Uber and Lyft data because we want to are curious how certain factors such as time, location, and distance, will play a role in the price of Uber/Lyft rides. We are also interested in eventually using regression and statistics to predict the prices of Uber rides based on location, time, and distance.
 
 ### Idea #3
 
