--- a/proposal/proposal.Rmd
+++ b/proposal/proposal.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "PROJECT TITLE"
-author: "WORLD"
-date: "10/22/2019"
+title: "NYC Airbnnb Popularity Factors"
+author: "Team World"
+date: "10/24/2019"
 output: github_document
 ---
 
