--- a/proposal/proposal.Rmd
+++ b/proposal/proposal.Rmd
@@ -7,7 +7,7 @@ output: github_document
 
 ### Section 1. Introduction
 
-Our topic is based on an AirBnb dataset in New York City for 2019. Ultimately, we hope to determine the best AirBnb’s to rent based on variables such as price, size, reviews and availability. We wanted to look at Airbnb data because we thought this could be interesting insight into the economic housing market in NYC. We plan to compare price by neighborhood and borough which could provide interesting insights into the cost of living in NYC. Through Kaggle we found this data set (https://www.kaggle.com/dgomonov/new-york-city-airbnb-open-data) that was collected in 2019 on Airbnb listings in New York City by a 4th year data science student at Drexel University. The data set includes variables: listing ID, name of the listing, host ID, name of the host, location, neighbourhood, latitude and longitude coordinates, room type, price in dollars, minimum_nights, number of reviews, latest review, number of reviews per month, amount of listing per host and availability.
+Our topic is based on an Airbnb dataset in New York City for 2019. Ultimately, we hope to determine the best Airbnbs to rent based on variables such as price, size, reviews and availability. We wanted to look at Airbnb data because we thought this could be interesting insight into the economic housing market in NYC. We plan to compare price by neighborhood and borough which could provide interesting insights into the cost of living in NYC. Through Kaggle we found this data set (https://www.kaggle.com/dgomonov/new-york-city-airbnb-open-data) that was collected in 2019 on Airbnb listings in New York City by a 4th year data science student at Drexel University. The data set includes variables: listing ID, name of the listing, host ID, name of the host, location, neighbourhood, latitude and longitude coordinates, room type, price in dollars, minimum_nights, number of reviews, latest review, number of reviews per month, amount of listing per host and availability.
 
 ### Section 2. Exploratory data analysis
 
@@ -39,7 +39,8 @@ abnb %>%
   group_by(neighbourhood_group) %>%
   select(neighbourhood) %>%
   count(neighbourhood) %>%
-  arrange(desc(n))
+  arrange(desc(n)) %>%
+  head(10)
 ```
 
 ```{r price-borough}
@@ -49,13 +50,63 @@ abnb %>%
   labs(title = "Price of Listings by Borough", x = "Borough", y = "Price")
 ```
 
-```{r price-room_type}
+```{r summarise-price}
 abnb %>%
-  ggplot(mapping = aes(x = availability_365, y = price, color = room_type)) +
-  geom_point(alpha = 0.3) + 
-  labs(title = "Price of Listing by Availability", x = "Room Type", y = "Price")
+  group_by(neighbourhood_group) %>%
+  summarise(
+    med_price = mean(price), 
+    IQR_price = IQR(price)
+    )
 ```
+
+```{r price-stats}
+abnb %>%
+  summarise(
+    med_price = mean(price), 
+    IQR_price = IQR(price)
+    )
+```
+
+```{r price-room_type-upper}
+abnb %>%
+  mutate(price_tier = ifelse(price > median(price), "upper", "lower")) %>%
+  filter(price_tier == "upper") %>%
+  ggplot(mapping = aes(x = availability_365, y = price)) +
+  geom_point(alpha = 0.2) + 
+  facet_grid(.~room_type) +
+  labs(
+    title = "Price of Listing and Availability by Room Type",
+    subtitle = "Above Median Listing Price",
+    x = "Availability", 
+    y = "Price")
+```
+
+```{r price-room_type-lower}
+abnb %>%
+  mutate(price_tier = ifelse(price > median(price), "upper", "lower")) %>%
+  filter(price_tier == "lower") %>%
+  ggplot(mapping = aes(x = availability_365, y = price)) +
+  geom_point(alpha = 0.2) + 
+  facet_grid(.~room_type) +
+  labs(
+    title = "Price of Listing and Availability by Room Type",
+    subtitle = "Below Median Listing Price",
+    x = "Availability", 
+    y = "Price")
+```
+
 
 ### Section 3. Research questions
 
+How does location (for example, borough, neighborhood, and coordinates) influence the price of a listing?
+
+How does the listing type (type of room) and online traffic (for example, review, when last reviewed) room incluence the availability of a listing?
+
+Show one things up there!!!
+
 ### Section 4. Data
+
+```{r glimpse}
+glimpse(abnb)
+```
+
