--- a/proposal/proposal.Rmd
+++ b/proposal/proposal.Rmd
@@ -9,7 +9,7 @@ output: github_document
 
 Our topic is based on an Airbnb dataset in New York City for 2019. Ultimately, we hope to determine the best Airbnbs to rent based on variables such as price, location, description, reviews, and availability. We wanted to look at the gig hospitality market in NYC. We plan to compare price by neighborhood and borough which could provide interesting insights into the cost of living in NYC. 
 
-Through Kaggle, we found this data set (https://www.kaggle.com/dgomonov/new-york-city-airbnb-open-data) that was collected, and continues to be updated, in 2019 on Airbnb listings in New York City by a 4th year data science student at Drexel University. The data set includes variables: listing ID, name of the listing, host ID, name of the host, location, neighbourhood, latitude and longitude coordinates, room type, price in dollars, minimum_nights, number of reviews, latest review, number of reviews per month, amount of listing per host and availability. A description of each of these is included in the codebook.
+Through Kaggle, we found this data set (https://www.kaggle.com/dgomonov/new-york-city-airbnb-open-data) that was collected, and continues to be updated, in 2019 on Airbnb listings in New York City by a 4th year data science student at Drexel University. We are unable to reach out to him to get more information on the data set, such as where he got it from or how he collected it, because our account on Kaggle is not at the "Contributor tier." The data set includes variables: listing ID, name of the listing, host ID, name of the host, location, neighbourhood, latitude and longitude coordinates, room type, price in dollars, minimum_nights, number of reviews, latest review, number of reviews per month, amount of listing per host and availability. A description of each of these is included in the codebook.
 
 ### Section 2. Exploratory data analysis
 
