Edits to Section 2

--- a/proposal/proposal.Rmd
+++ b/proposal/proposal.Rmd
@@ -57,10 +57,13 @@ abnb %>%
 
 ```{r price-borough}
 abnb %>%
-  ggplot(mapping = aes(x = neighbourhood_group, y = price)) +
-  geom_boxplot() + 
+  ggplot(mapping = aes(x = price)) +
+  geom_histogram(bins=35) +
+  facet_wrap(.~neighbourhood_group)
   labs(title = "Price of Listings by Borough", x = "Borough", y = "Price")
 ```
+
+Lots of right skew...
 
 ```{r summarise-price}
 abnb %>%
@@ -82,6 +85,12 @@ abnb %>%
   head(5)
 ```
 
+```{r}
+abnb %>%
+  ggplot(mapping = aes (x = longitude, y = latitude, color = price)) +
+  geom_point(alpha = 0.6)
+```
+
 
 LISTING DETAILS AND AVAILABILITY
 
@@ -98,27 +107,60 @@ abnb %>%
 
 ```{r room_type-availability_365, message=FALSE}
 abnb %>%
-  ggplot(mapping = aes(x =  reviews_per_month, y = availability_365, color = room_type)) +
-  geom_point(alpha=0.2) + 
+  ggplot(mapping = aes(x =  room_type, y = availability_365)) +
+  geom_boxplot() + 
   labs(
-    title = "Availability and Number of Reviews",
-    x = "Number of Reviews", 
+    title = "Availability by Room Type",
+    x = "Room Type", 
     y = "Availability (days per year)")
 ```
 
 ```{r}
 abnb %>%
-  mutate(avail = ifelse(availability_365 > median(availability_365), "more", "less")) %>%
-  filter(avail == "more") %>%
-  ggplot(mapping = aes(x =  number_of_reviews, y = availability_365, color = room_type)) +
-  geom_point() + 
-  labs(
-    title = "Availability and Number of Reviews by Room Type",
-    subtitle = "Below Median Availability",
-    x = "Number of Reviews", 
-    y = "Availability (days per year)")
+  group_by(room_type) %>%
+  summarise(
+    med_availability_365 = median(availability_365), 
+    IQR_availability_365 = IQR(availability_365)
+    ) %>%
+  arrange(desc(med_availability_365)) %>%
+  head(5)
 ```
 
+```{r summarise-room_type}
+abnb %>%
+  group_by(room_type) %>%
+  summarise(
+    med_availability_365 = median(availability_365), 
+    IQR_availability_365 = IQR(availability_365)
+    ) %>%
+  arrange(desc(med_availability_365)) %>%
+  head(5)
+```
+
+```{r}
+abnb %>%
+  mutate(avail = case_when(
+    availability_365 < 100            ~ "Very Busy",
+    availability_365 < 200 && availability_365 > 100  ~ "Somewhat Busy",
+    availability_365 > 300    ~ "Not Busy",)
+    ) %>%
+ggplot(mapping = aes(x = room_type, fill = avail)) +
+  geom_bar(position = "fill")
+```
+
+Note that there are NAs.
+
+```{r avail-by-room_type-reviews, message=FALSE}
+abnb %>%
+  mutate(avail = case_when(
+    availability_365 < 100            ~ "Very Busy",
+    availability_365 >= 100 & availability_365 <= 300  ~ "Somewhat Busy",
+    availability_365 > 300    ~ "Not Busy",)
+    ) %>%
+ggplot(mapping = aes(x = calculated_host_listings_count, y = reviews_per_month)) +
+  geom_point() +
+  facet_grid(room_type ~ avail)
+```
 
 ### Section 3. Research questions
 
