Finished Section 2: Added Narratives and Named Code Chunks

--- a/proposal/proposal.Rmd
+++ b/proposal/proposal.Rmd
@@ -41,6 +41,7 @@ abnb <- read_csv("AB_NYC_2019.csv")
 LOCATION AND PRICE:
 
 Univariate Borough Count (Visualization):
+Creating a histogram that displays number of listings by neighborhood borough in New York City.
 
 ```{r visualization-univariate}
 ggplot(data = abnb, mapping = aes(x = neighbourhood_group)) +
@@ -48,12 +49,20 @@ ggplot(data = abnb, mapping = aes(x = neighbourhood_group)) +
   labs(title = "Listings by Borough", x = "Borough", y = "Count")
 ```
 
+According to this histogram, Manhattan and Brooklyn dominate the number of listings on Airbnb in New York City. More specifically, there is roughly 20,000 listings in Brooklyn and slightly more than 20,000 listings in Manhattan. The Queens borough follows after with roughly 5,000 listings, followed by Bronx and Staten Island with fewer than 1,100 listings each.
+
 Univariate Borough Count (Summary)
+Creating summary statistics that will count the number of listings in each neighborhood group.
 ```{r neighbourhood_group-count}
 abnb %>%
   count(neighbourhood_group) %>%
   arrange(desc(n))
 ```
+
+According to the table, Manhattan has the most listings at 21,661 followed by Brooklyn at 20,104 listings, followed by Queens at 5,666, Bronx at 1,091, and Staten Island last at only 373 listings.
+
+
+Creating a facet histogram that will display the price of listings by borough.
 
 ```{r price-borough}
 abnb %>%
@@ -63,7 +72,10 @@ abnb %>%
   labs(title = "Price of Listings by Borough", x = "Borough", y = "Price")
 ```
 
-Lots of right skew...
+The graphs display that the prices for listings are very skewed to the right. In other words, there are many outliers that fall out of the IQR for each neighborhood group. Most listings fall in the 50 to 150 price range. However, there are outliers that are a lot higher than this price range.
+
+
+Creating summary statistics that displays the median and IQR price of each neighborhood group.
 
 ```{r summarise-price}
 abnb %>%
@@ -76,6 +88,9 @@ abnb %>%
   head(5)
 ```
 
+According to the table, Manhattan has the highest median price at 150 followed by Brooklyn at 90, Queens and Staten Island at 75, and Bronx last at 65. 
+
+Creating summary statistics that finds the median price based upon neighborhood in descending order.
 
 ```{r neighbourhood_group-neighbourhood}
 abnb %>%
@@ -85,17 +100,20 @@ abnb %>%
   head(5)
 ```
 
-```{r}
+According to the table, Fort Wadsworth in Staten Island has the highest median price at 800 followed by Woodrow at 700, Tribeca at 295, Neponsit at 274, and NoHo at 250.
+
+```{r price-at-longtitude}
 abnb %>%
   ggplot(mapping = aes (x = longitude, y = latitude, color = price)) +
   geom_point(alpha = 0.6)
 ```
 
+The graph displays that most listings take place in the (-74, -73.7) longtitude region and (40.55, 40.9) latitude region. Prices are generally in the 50 to 150 range.
 
 LISTING DETAILS AND AVAILABILITY
 
 
-```{r message=FALSE}
+```{r avail-listings-distr, message=FALSE}
 abnb %>%
   ggplot(mapping = aes(x = availability_365)) +
   geom_histogram(binwidth=80) + 
@@ -104,6 +122,8 @@ abnb %>%
        y = "Count"
   )
 ```
+
+The graph is skewed to the right with most occurrences happening in the 0 to 100 availibily (days per year). More specifically, approximately more than 25,000 listings occurr in the 0 to 100 availability (days per year).
 
 ```{r room_type-availability_365, message=FALSE}
 abnb %>%
@@ -115,7 +135,9 @@ abnb %>%
     y = "Availability (days per year)")
 ```
 
-```{r}
+The graph above are boxplots that show that the availability based on room type is also skewed to the right. The median availability days among entire home and private rooms are slightly less than 50 days while shared rooms have a rough median availability of 90 days.
+
+```{r table-avail}
 abnb %>%
   group_by(room_type) %>%
   summarise(
@@ -126,18 +148,10 @@ abnb %>%
   head(5)
 ```
 
-```{r summarise-room_type}
-abnb %>%
-  group_by(room_type) %>%
-  summarise(
-    med_availability_365 = median(availability_365), 
-    IQR_availability_365 = IQR(availability_365)
-    ) %>%
-  arrange(desc(med_availability_365)) %>%
-  head(5)
-```
+The table shows that the median availability are 90 days for shared room, 45 days for private room, and 42 days for entire home/apartment.
 
-```{r}
+
+```{r prop-of-avail}
 abnb %>%
   mutate(avail = case_when(
     availability_365 < 100            ~ "Very Busy",
@@ -148,7 +162,8 @@ ggplot(mapping = aes(x = room_type, fill = avail)) +
   geom_bar(position = "fill")
 ```
 
-Note that there are NAs.
+The stacked bar graph above shows the proprotion of listings based on room_type that are either not busy, very busy, or have no data (NAs).
+According to the graph, all entire home, private rooms, shared room listing types are generally mostly very busy at roughly 60% while only roughly 20% across the charts are roughly not busy. Shared rooms are generally less busy than private rooms and entire home/apt listings.
 
 ```{r avail-by-room_type-reviews, message=FALSE}
 abnb %>%
@@ -161,6 +176,8 @@ ggplot(mapping = aes(x = calculated_host_listings_count, y = reviews_per_month))
   geom_point() +
   facet_grid(room_type ~ avail)
 ```
+
+The graphs above show that among entire home/apt and private rooms, there is a higher amount of reviews per month (roughly less than 20) with fewer calculated host listings.
 
 ### Section 3. Research questions
 
